--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -9,10 +9,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">Shopping cart</a>
       </li>
-      <li class="nav-item" *ngIf="!user">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
-      <li class="nav-item dropdown" ngbDropdown *ngIf="user">
+      <ng-template #anonymousUser>
+        <li class="nav-item" *ngIf="!(auth.user$ | async)">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+      </ng-template>
+      <li class="nav-item dropdown" ngbDropdown *ngIf="auth.user$ | async as user; else anonymousUser">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           {{ user.displayName }}
         </a>
