--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -10,18 +10,20 @@
         <a class="nav-link" routerLink="/shopping-cart">Shopping cart</a>
       </li>
       <ng-template #anonymousUser>
-        <li class="nav-item" *ngIf="!(auth.user$ | async)">
+        <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
       </ng-template>
-      <li class="nav-item dropdown" ngbDropdown *ngIf="auth.user$ | async as user; else anonymousUser">
+      <li class="nav-item dropdown" ngbDropdown *ngIf="appUser ; else anonymousUser">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{ user.displayName }}
+          {{ appUser.name }}
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdown01" ngbDropdownMenu>
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          <ng-container *ngIf="appUser.isAdmin">
+            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          </ng-container>
           <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
