--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,7 +1,7 @@
-<form>
+<form (ngSubmit)="save(f)" #f="ngForm">
   <div class="form-group">
     <label for="title">Title</label>
-    <input id="title" type="text" class="form-control">
+    <input ngModel name="title" id="title" type="text" class="form-control">
   </div>
   <div class="form-group">
     <label for="price">Price</label>
@@ -9,19 +9,19 @@
       <div class="input-group-prepend">
         <span class="input-group-text">$</span>
       </div>
-      <input type="number" id="price" class="form-control">
+      <input ngModel name="price" type="number" id="price" class="form-control">
     </div>
   </div>
   <div class="form-group">
     <label for="category">Category</label>
-    <select id="category" class="form-control">
+    <select id="category" class="form-control" ngModel name="category">
       <option value=""></option>
-      <option *ngFor="let c of categories$ | async" [value]="c.$key"> {{ c.name }}</option>
+      <option *ngFor="let c of categories" [value]=c.key> {{ c.name}}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="imageUrl">Image Url</label>
-    <input id="imageUrl" type="text" class="form-control">
+    <input id="imageUrl" type="text" class="form-control" ngModel name="imageUrl">
   </div>
   <button class="btn btn-primary">Save</button>
 </form>
