--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,7 +1,10 @@
 <form (ngSubmit)="save(f)" #f="ngForm">
   <div class="form-group">
     <label for="title">Title</label>
-    <input ngModel name="title" id="title" type="text" class="form-control">
+    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+    <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+      Title is required.
+    </div>
   </div>
   <div class="form-group">
     <label for="price">Price</label>
@@ -9,19 +12,30 @@
       <div class="input-group-prepend">
         <span class="input-group-text">$</span>
       </div>
-      <input ngModel name="price" type="number" id="price" class="form-control">
+      <input #price="ngModel" ngModel name="price" type="number" id="price" class="form-control" required [min]="0">
+    </div>
+    <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+      <div *ngIf="price.errors.required">Price is required.</div>
+      <div *ngIf="price.errors.min">Price should be 0 or higher.</div>
     </div>
   </div>
   <div class="form-group">
     <label for="category">Category</label>
-    <select id="category" class="form-control" ngModel name="category">
+    <select id="category" #categorie="ngModel" class="form-control" ngModel name="category" required>
       <option value=""></option>
       <option *ngFor="let c of categories" [value]=c.key> {{ c.name}}</option>
     </select>
+    <div class="alert alert-danger" *ngIf="categorie.touched && categorie.invalid">
+      Categorie is required.
+    </div>
   </div>
   <div class="form-group">
     <label for="imageUrl">Image Url</label>
-    <input id="imageUrl" type="text" class="form-control" ngModel name="imageUrl">
+    <input #image="ngModel" id="imageUrl" type="text" class="form-control" ngModel name="imageUrl" required url>
+    <div class="alert alert-danger" *ngIf="image.touched && image.invalid">
+      <div *ngIf="image.errors.required"> Image Url is required. </div>
+      <div *ngIf="image.errors.url"> Image Url is not valid. </div>
+    </div>
   </div>
   <button class="btn btn-primary">Save</button>
 </form>
