--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,2 +1,20 @@
-<a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+<p>
+  <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+</p>
 
+<table class="table">
+  <thead>
+    <th>Title</th>
+    <th>Price</th>
+    <th></th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let p of products">
+      <td>{{p.title}}</td>
+      <td>{{p.price}}</td>
+      <td>
+        <a [routerLink]="['admin/products',p.key]">Edit</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
