--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,7 +1,13 @@
 <p>
   <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
 </p>
-
+<p>
+  <input
+    #query
+    (keyup)="filter(query.value)"
+    type="text" class="form-control" placeholder="Search..."
+  >
+</p>
 <table class="table">
   <thead>
     <th>Title</th>
@@ -9,7 +15,7 @@
     <th></th>
   </thead>
   <tbody>
-    <tr *ngFor="let p of products">
+    <tr *ngFor="let p of filtredProducts">
       <td>{{p.title}}</td>
       <td>{{p.price}}</td>
       <td>
