--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -39,7 +39,11 @@
           <div *ngIf="image.errors.url"> Image Url is not valid. </div>
         </div>
       </div>
-      <button class="btn btn-primary">Save</button>
+      <div class="row">
+        <div class="col"><button class="btn btn-primary">Save</button></div>
+        <div class="col-md-10"><button class="btn btn-danger" (click)="delete()" type="button">Delete</button></div>
+      </div>
+
     </form>
   </div>
   <div class="col-md-6">
