--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,38 @@
-<p>products works!</p>
+<div class="row">
+
+    <div class="col-3">
+      <div class="sticky-top">
+        <div class="list-group">
+          <a class="list-group-item list-group-item-action" [class.active]=" !category " routerLink="/">
+            All Categories
+          </a>
+          <a *ngFor="let c of categories" class="list-group-item list-group-item-action" routerLink="/"
+             [queryParams]="{ category: c.key }" [class.active]="category === c.key">
+            {{ c.name }}
+          </a>
+        </div>
+      </div>
+    </div>
+
+  <div class="col">
+    <div class="row">
+      <ng-container *ngFor="let product of filtredProducts ; let i = index">
+        <div class="col" >
+          <div class="card" style="width: 15rem;" *ngIf="product.title">
+            <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
+            <div class="card-body">
+              <h5 class="card-title">{{product.title}}</h5>
+              <p class="card-text">{{product.price | currency: 'USD':true}}</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary btn-block">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="w-100" *ngIf="( i+1 ) % 2 ===0"></div>
+      </ng-container>
+    </div>
+  </div>
+</div>
+
+
