--- a/src/app/admin/admin-orders/admin-orders.component.html
+++ b/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,1 +1,17 @@
-<p>admin-orders works!</p>
+<h1> Orders </h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Date</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let or of orders">
+      <td>{{ or.shipping.name }}</td>
+      <td>{{ or.datePlaced | date }}</td>
+      <td> <a class="btn btn-primary" [routerLink]="['/order-success' ,or.key]"> View </a> </td>
+    </tr>
+  </tbody>
+</table>
